// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedInputGroup matches snapshot on undefined value 1`] = `
<div
  class="bp3-input-group formatted-input-group"
>
  <input
    class="bp3-input"
    type="text"
    value=""
  />
</div>
`;

exports[`FormattedInputGroup matches snapshot with escaped value 1`] = `
<div
  class="bp3-input-group formatted-input-group"
>
  <input
    class="bp3-input"
    type="text"
    value="Here are some chars \\\\t\\\\r\\\\n lol"
  />
</div>
`;
